style(icon-picker): fix scrollbar margin

--- a/modules/icon-picker/src/css/icon-picker.scss
+++ b/modules/icon-picker/src/css/icon-picker.scss
@@ -94,6 +94,7 @@ $iconPicker-group-margin-bottom: 8px;
 
   &-main {
     margin-top: $iconPicker-main-margin;
+    margin-bottom: $iconPicker-main-margin;
   }
 
   &-pack {
